# Poly-Engine

./: CMakeLists.txt  README.md  build.py
include/PolyEngine/: polyengine.h
source/: CMakeLists.txt
source/libraries/glad/src/: glad.c
src/: CMakeLists.txt  polyengine.cpp
src/graphics/: graphics.cpp  graphics.h  window.cpp
src/graphics/objects/: window.cpp
tests/: CMakeLists.txt  triangle.py
